--- a/platforms/android/assets/www/scss/_base.scss
+++ b/platforms/android/assets/www/scss/_base.scss
@@ -1,19 +1,4 @@
-/* Scss Document */
 
-	
-#homeicon {
-	width: 3rem;
-	height: 3rem;
-	}
-#geoicon {
-		width: 3rem;
-	height: 3rem;
-	
-	}
-#conticon {
-		width: 3rem;
-	height: 3rem;
-	}
 
 *{
 	padding:0;
@@ -27,23 +12,21 @@ html{
   overflow:hidden;
   
 }
-h2, h3, p{
-	padding:0.2rem 2rem;
-	font-size: 1.5rem;
+body {
+	height: 100%;
 }
 
-p {
-	font-family:$font-primary;
-	font-size: 1rem;	
-}
-
-h2, h3 {	
+h2, h3{
 	font-family:$font-secondary;
+	padding:0.2rem 2rem;
+	font-size: 1.2rem;
 }
 
-#sticky {
-	background-color: $orange;
-	color: $black;
+p, ul.desc {
+	font-family:$font-primary;
+	font-size: .8rem;
+	margin-left: 2rem;
+	margin-right: 2rem;
 }
 
 /********************************
@@ -56,7 +39,7 @@ ul.tabs{
 	/*margin-bottom:30px;*/
 }
 .tabs li.tab{
-	background-color:$darkgrey;
+	background:$darkgrey !important;
 	float:left; 
 	display:inline-block;
 	width:33.333%;
@@ -70,17 +53,17 @@ ul.tabs{
 	color: #fff;
 	text-decoration: none;
 	border: none;
-	background-color: $lightgrey;
+	background-color: $lightgrey !important;
 	text-align: center;
-	border-top:1px solid $darkgrey;
-	border-right:1px solid $darkgrey;
-	border-left:1px solid $darkgrey;
+	border-top:1px solid $darkgrey !important;
+	border-right:1px solid $darkgrey !important;
+	border-left:1px solid $darkgrey !important;
 }
 .tabs li.tab a.activetab{
-	background-color:$darkgrey;
-	border-top:1px solid $darkgrey;
-	border-right:1px solid $darkgrey;
-	border-left:1px solid $darkgrey;
+	background-color:$darkgrey !important;
+	border-top:1px solid $darkgrey !important;
+	border-right:1px solid $darkgrey !important;
+	border-left:1px solid $darkgrey !important;
 }
 
 /********************************
@@ -92,7 +75,7 @@ ul.tabs{
 	background-color:$white;
 	color: $black;	
 	/*width:100%;*/
-	
+	padding-bottom: 60px;
 	position:absolute; 
 	top: 7rem; 	
 	margin-top: -1px;
@@ -119,6 +102,7 @@ ul.tabs{
   left: 0;
   right: 0;
   z-index: 5;
+  padding-bottom: 60px;
   background-color:$white;
   border-top:1px solid #lightgrey;
 }
@@ -145,6 +129,20 @@ div#home{
   font-variant:small-caps;
   font-family:$font-secondary;
 }
+[data-role="footer"] {
+	background-color: $orange;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	z-index: 100;
+}
+
+[data-role="footer"] h3 {
+	color: $black;
+	text-align: center;
+}
+
 [data-role="content"]{
   margin-top: -1px;
 	border-top:1px solid #666;	
@@ -153,14 +151,23 @@ div#home{
 [data-role="content"] p:last-child{
 	padding-bottom:4rem;
 }
-/*[data-rel="back"]{
-	float:left;
-	color:#fff;	
-	padding:0.3rem 1rem;
-  color: $black;
-  font-size: 1rem;
-  line-height:2.0rem;
-  text-decoration:none;
-  display:none;
 
-} */
+/*** ICONS  ****/
+
+#hometab {
+	background: url("../img/home2.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;	
+}
+
+#geotab {
+	background: url("../img/compass2.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;
+}
+
+#contacttab {
+	background: url("../img/contacts2.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;
+}
