--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -401,7 +401,9 @@ html {
   width: 100%;
   height: 100%;
   background-color: #333;
-  overflow: hidden; }
+  overflow: hidden;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
 
 body {
   height: 100%; }
@@ -535,17 +537,17 @@ div#home {
 
 /*** ICONS  ****/
 #hometab {
-  background: url("../img/home2.png") no-repeat 50% 50%;
+  background: url("../img/home.png") no-repeat 50% 50%;
   background-size: 3rem 3rem;
   text-align: center; }
 
 #geotab {
-  background: url("../img/compass2.png") no-repeat 50% 50%;
+  background: url("../img/compass.png") no-repeat 50% 50%;
   background-size: 3rem 3rem;
   text-align: center; }
 
 #contacttab {
-  background: url("../img/contacts2.png") no-repeat 50% 50%;
+  background: url("../img/contacts.png") no-repeat 50% 50%;
   background-size: 3rem 3rem;
   text-align: center; }
 
