--- a/www/scss/_base.scss
+++ b/www/scss/_base.scss
@@ -8,10 +8,12 @@
 html{
 	width:100%;
 	height:100%;
-  background-color:#333;
-  overflow:hidden;
-  
+    background-color:#333;
+    overflow:hidden;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
 }
+
 body {
 	height: 100%;
 }
@@ -155,19 +157,19 @@ div#home{
 /*** ICONS  ****/
 
 #hometab {
-	background: url("../img/home2.png") no-repeat 50% 50%;
+	background: url("../img/home.png") no-repeat 50% 50%;
 	background-size: 3rem 3rem;
 	text-align: center;	
 }
 
 #geotab {
-	background: url("../img/compass2.png") no-repeat 50% 50%;
+	background: url("../img/compass.png") no-repeat 50% 50%;
 	background-size: 3rem 3rem;
 	text-align: center;
 }
 
 #contacttab {
-	background: url("../img/contacts2.png") no-repeat 50% 50%;
+	background: url("../img/contacts.png") no-repeat 50% 50%;
 	background-size: 3rem 3rem;
 	text-align: center;
 }
